--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -1226,6 +1226,7 @@ body {
       font-size: 12px;
       color: #909090;
     }
+
     .add-message {
       border-top: 1px solid #ECF0F1;
       textarea {
@@ -1249,9 +1250,10 @@ body {
 
 .mess-bg {
   background-image: url("../images/develop-img.jpeg");
+  background-size: cover;
   min-height: 100%;
   min-width: 1024px;
-  width: 100%;
+  width: 110%;
   height: auto;
   position: fixed;
   top: 0;
