--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -5,7 +5,7 @@
     {% include '_ruslan/reader/_reader_nav.html' %}
     <script>
         module.controller('list_reader', function ($scope, $ok, $sce) {
-            angularControllerFunction('UserLoginController', 'set_selected_user_menu')('list_reader');
+            angularControllerFunction('user_controller', 'set_selected_user_menu')('list_reader');
             $scope.$$translate = {{ translates('list_reader')|safe }};
             $scope.favorite = {{ favorite }}
                     $scope.favorite ? addToMenu_Selected('favorite') : addToMenu_Selected('list');
