--- a/profapp/templates/auth/bak_change_password.html
+++ b/profapp/templates/auth/bak_change_password.html
@@ -5,7 +5,7 @@
 {% endblock head %}
 
 {% block portal_content %}
-<div ng-controller="UserLoginController" ng-cloak>
+<div ng-controller="user_controller" ng-cloak>
 <div>
     <h1 class="nice-title">{{ _('Change Your Password') }}<span></span></h1>
 </div>
