--- a/profapp/templates/auth/confirm_email.html
+++ b/profapp/templates/auth/confirm_email.html
@@ -12,7 +12,7 @@
 
 
 
-<div class="container" ng-controller="UserLoginController1">
+<div class="container" ng-controller="user_controller1">
     <h1 class="nice-title">{{ _('Hello') }}, {{ current_user.profireader_name }}!<span></span></h1>
     <h3 pr-test="Confirmed">{{ _('You have confirmed your account successfully!') }}</h3>
     <p>
