--- a/profapp/templates/auth/confirm_email.html
+++ b/profapp/templates/auth/confirm_email.html
@@ -13,7 +13,7 @@
 
 
 <div class="container" ng-controller="user_controller1">
-    <h1 class="nice-title">{{ _('Hello') }}, {{ current_user.profireader_name }}!<span></span></h1>
+    <h1 class="nice-title">{{ _('Hello') }}, {{ current_user.full_name }}!<span></span></h1>
     <h3 pr-test="Confirmed">{{ _('You have confirmed your account successfully!') }}</h3>
     <p>
 
