--- a/profapp/templates/company/company_employee_details.html
+++ b/profapp/templates/company/company_employee_details.html
@@ -37,7 +37,7 @@
         <h2>
             <img class="person-small-cover" pr-image-url="{{ employee.avatar.url }}"/>
             <img class="logo-small-cover" pr-image-url="{{ employer.logo.url }}"/>
-            {{ _('Employee `%(employee.profireader_name)s` at company `%(employer.name)s`') }}</h2>
+            {{ _('Employee `%(employee.full_name)s` at company `%(employer.name)s`') }}</h2>
 
         <img pr-image-url="{{ employer.logo.url }}"/>
         {{ _('status') }} {{ employment.status }}<br>
