--- a/profapp/templates/company/materials.html
+++ b/profapp/templates/company/materials.html
@@ -52,7 +52,7 @@
                 urlLoadGridData: $scope.url_search_article({company_id: $scope.company.id}),
                 category: [{
                     name: 'searching',
-                    field: 'title&editor.profireader_name',
+                    field: 'title&editor.full_name',
                     visible: true,
                     filtering: true,
                     filter: {type: 'input'}
@@ -64,7 +64,7 @@
                         img_url: 'illustration.url',
                         href: 'url_material_details({company_id:grid.appScope.company.id,material_id:row.entity.id})'
                     },{
-                        name: 'editor.profireader_name', category:"searching"
+                        name: 'editor.full_name', category:"searching"
                     },{
                         name: 'md_tm',enableCellEdit: true,
                         afilter: {type: 'date_range'}
