--- a/profapp/templates/help.html
+++ b/profapp/templates/help.html
@@ -44,9 +44,9 @@
             <div class="form-for-message col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3">
 
                 <input pr-test="EmailInput" type="email" class="form-control" placeholder="Email"
-                       ng-model="data.email" name="profireader_email"
+                       ng-model="data.email" name="address_email"
                        >
-                <div ng-show="formHelp.profireader_email.$error.pattern" class="error-input">{{ _('The
+                <div ng-show="formHelp.address_email.$error.pattern" class="error-input">{{ _('The
                         email not validate!') }}
                 </div>
                 <textarea pr-test="TextInput" class="form-control" rows="4"
