--- a/profapp/templates/partials/base_profireader.html
+++ b/profapp/templates/partials/base_profireader.html
@@ -64,7 +64,7 @@
                                     {#                        <img src="{{ current_user.profireader_small_avatar_url }}" style="width:18px;border:0">#}
                                     {#TODO: AA by OZ: in next line http://bla-bla/None (404 error) if no user loged in #}
                                     <img class="person-small-cover" {{ prImageUrl(user.avatar.url) }} />
-                                    {{ '{{' }} user.profireader_name {{ '}}' }}
+                                    {{ '{{' }} user.full_name {{ '}}' }}
                                     <b class="caret"></b>
                                 </a>
                                 <ul class="dropdown-menu">
