contact us page cleaned up

--- a/profapp/templates/auth/login_signup.html
+++ b/profapp/templates/auth/login_signup.html
@@ -126,7 +126,7 @@
                         <br/>
                         {{ __('If you lost email confirmation token you can <a href="%(url)s">regenerate it</a>', {'url': url_for('auth.email_confirmation') } ) }}
                         <br/>
-                        {{ __('If you have any other problems <a href="%(url)s">contact us</a>', {'url': url_for('index.help') } ) }}
+                        {{ __('If you have any other problems <a href="%(url)s">contact us</a>', {'url': url_for('index.contact_us') } ) }}
 
                         {% raw %}
                     </span>
