--- a/profapp/templates/partials/base_profireader.html
+++ b/profapp/templates/partials/base_profireader.html
@@ -97,7 +97,7 @@
                     <li><a class="filemanager_btn" href="#" ng-click="open_filemanager()"
                            title="{{ _('File manager') }}"><span
                             class="tooltip">{{ _('File manager') }}</span></a></li>
-                    <li><a class="help_btn" href="{{ url_for('index.help') }}" title="{{ _('Read help') }}"><span
+                    <li><a class="help_btn" href="{{ url_for('index.contact_us') }}" title="{{ _('Read help') }}"><span
                             class="tooltip">{{ _('Read help') }}</span></a></li>
 
                 </ul>
