--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -16,33 +16,34 @@
 </script>
 
 <script>
-    module.controller('tos_dialog_controller', function ($scope, $uibModal, $ok, $uibModalInstance) {
-        $scope.accept_tos = function (accept_or_decline) {
-            $ok('{{ url_for('auth.tos') }}', {'accept': accept_or_decline}, function (resp) {
-                $uibModalInstance.close(resp['tos']);
-            });
-        }
-    });
+{#    module.controller('tos_dialog_controller', function ($scope, $uibModal, $ok, $uibModalInstance) {#}
+{#        $scope.accept_tos = function (accept_or_decline) {#}
+{#            $ok('{{ url_for('auth.tos') }}', {'accept': accept_or_decline}, function (resp) {#}
+{#                $uibModalInstance.close(resp['tos']);#}
+{#            });#}
+{#        }#}
+{#    });#}
 
     module.controller('user_controller', function ($scope, $uibModal, $ok, $timeout) {
         $scope.user = {{ g.user.get_client_side_dict()| tojson|safe if g.user else 'null'}};
-        $scope.languages = {{ g.languages|tojson|safe }}
-                $scope.lang = {{ g.lang|tojson|safe }}
-                        $scope.tos = function () {
-                            if (!$scope.user || $scope.user.tos) {
-                                return;
-                            }
-                            if ($scope.user && $scope.user.tos != true) {
-                                var modalInstance = $uibModal.open({
-                                    templateUrl: 'tos_dialog.html',
-                                    controller: 'tos_dialog_controller'
-                                });
-                                modalInstance.result.then(function (accepted) {
-                                    $scope.user.tos = accepted;
-                                });
-                                return true
-                            }
-                        };
+        $scope.languages = {{ g.languages|tojson|safe }};
+        $scope.lang = {{ g.lang|tojson|safe }};
+
+{#                        $scope.tos = function () {#}
+{#                            if (!$scope.user || $scope.user.tos) {#}
+{#                                return;#}
+{#                            }#}
+{#                            if ($scope.user && $scope.user.tos != true) {#}
+{#                                var modalInstance = $uibModal.open({#}
+{#                                    templateUrl: 'tos_dialog.html',#}
+{#                                    controller: 'tos_dialog_controller'#}
+{#                                });#}
+{#                                modalInstance.result.then(function (accepted) {#}
+{#                                    $scope.user.tos = accepted;#}
+{#                                });#}
+{#                                return true#}
+{#                            }#}
+{#                        };#}
 
 
         $scope.url_list_reader = {{ raw_url_for('index.list_reader')|safe }}
@@ -56,7 +57,7 @@
                 };
 
         $scope.url_company_companies = {{ raw_url_for('company.companies')|safe }}
-                $scope.url_general_help = {{ raw_url_for('index.help')|safe }}
+                $scope.url_general_help = {{ raw_url_for('index.contact_us')|safe }}
                         $scope.url_tutorial = {{ raw_url_for('tutorial.tutorial')|safe }}
                                 $scope.url_auth_logout = {{ raw_url_for('auth.logout')|safe }}
                                         $scope.url_user_profile = {{ raw_url_for('user.profile')|safe }}
@@ -113,32 +114,33 @@
         <div class="col-lg-offset-2 col-md-offset-1 col-lg-6 col-md-7 col-sm-8 col-xs-12 menu-site">
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul>
-                    <li ng-if="user"><a pr_test="ReadLine" href="{{ url_list_reader() }}"
+                    <li class="dropdown" ng-if="user"><a pr_test="ReadLine" href="{{ url_list_reader() }}"
                                         title="{{ _('Стрічкa читача') }}"
                                         ng-class="{'selected': selected_user_menu == 'list_reader'}"><i
                             class="fa fa-newspaper-o"></i><span>{{ _('Стрічкa читача') }}</span></a></li>
-                    <li ng-if="user && user.tos"><a pr_test="UserMassages" href="{{ url_messenger }}"
+                    <li class="dropdown" ng-if="user && user.tos"><a pr_test="UserMassages" href="{{ url_messenger }}"
                                                     title="{{ _('Всі повідомлення') }}"
                                                     ng-class="{'selected': selected_user_menu == 'messages'}"><i
                             class="fa fa-envelope-o"></i><span>{{ _('Всі повідомлення') }}</span></a></li>
-                    <li ng-if="user.tos"><a pr_test="CompaniesList" href="{{ url_company_companies() }}"
+                    <li class="dropdown" ng-if="user.tos"><a pr_test="CompaniesList" href="{{ url_company_companies() }}"
                                             title="{{ _('Компанії') }}"
                                             ng-class="{'selected': selected_user_menu == 'companies'}"><i
                             class="fa fa-building-o"></i><span>{{ _('Компанії') }}</span></a></li>
-                    <li ng-if="user.tos"><a pr_test="FileManeger" href="{{ login_or_none_href() }}"
+                    <li class="dropdown" ng-if="user.tos"><a pr_test="FileManeger" href="{{ login_or_none_href() }}"
                                             ng-click="open_filemanager()" title="{{ _('Менеджер файлів') }}"
                                             ng-class="{'selected': selected_user_menu == 'file_manager'}"><i
                             class="fa fa-folder-open-o"></i><span>{{ _('Менеджер файлів') }}</span></a></li>
-                    <li class="info-padding"><a pr_test="UserInfo" href="{{ url_general_help() }}"
-                                                title="{{ _('Help information') }}" target="_blank"
-                                                ng-class="{'selected': selected_user_menu == 'info'}"><i
-                            class="fa fa-info"></i><span>{{ _('Help information') }}</span></a></li>
-                    <li class="info-padding"><a pr_test="Tutorial" href="{{ url_tutorial() }}"
+                    <li class="dropdown"><a pr_test="UserInfo" href="{{ url_general_help() }}"
+                                                title="{{ _('Contact us') }}" target="_blank"
+                                                ng-class="{'selected': selected_user_menu == 'contact_us'}"><i
+                            class="fa fa-question-circle"></i><span>{{ _('Contact us') }}</span></a></li>
+
+                    <li class="dropdown"><a pr_test="Tutorial" href="{{ url_tutorial() }}"
                                                 title="{{ _('tutorial') }}"
-                                                ng-class="{'selected': selected_user_menu == 'info'}"><i
+                                                ng-class="{'selected': selected_user_menu == 'tutorial'}"><i
                             class="fa fa-file-video-o"></i><span>{{ _('Tutorial') }}</span></a></li>
 
-                    <li class="dropdown"><a class="dropbtn" title="{{ _('Language') }}"><i
+                    <li class="dropdown"><a title="{{ _('Language') }}"><i
                             class="fa fa-language"></i><span>{{ _('Language') }}</span></a>
                         <div class="dropdown-content">
                             <a ng-repeat="language in languages" ng-class="{'selected': language.name == lang}"
