--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -106,14 +106,15 @@
                         <span class="input-group-addon" id="sizing-addon1">{{ _('Password') }}</span>
                         <input class="form-control" aria-describedby="sizing-addon1" type="text"
                                placeholder="if you want change password, put it here!"
-                               ng-model="data.change_password.password1"
-                               pr-validation-answer="data_validation:password1">
+                               ng-model="data.user.password"
+                                type="password"
+                               pr-validation-answer="data_validation:password">
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                         <span class="input-group-addon" id="sizing-addon1">{{ _('Confirm password') }}</span>
-                        <input class="form-control" aria-describedby="sizing-addon1" type="text"
-                               placeholder="comfirm password" ng-model="data.change_password.password2"
-                               pr-validation-answer="data_validation:password2">
+                        <input type="password" class="form-control" aria-describedby="sizing-addon1"
+                               placeholder="comfirm password" ng-model="data.user.password_confirmation"
+                               pr-validation-answer="data_validation:password_confirmation">
 
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
