--- a/profapp/templates/auth/reset_password.html
+++ b/profapp/templates/auth/reset_password.html
@@ -9,7 +9,7 @@
 
     module.controller('resetpassword',  function($scope, $ok){
       $scope.$$translate = {{ translates('resetpassword')|safe }};
-      $scope.password_reset_request = '{{ url_for('auth.password_reset_request') }}'
+      $scope.password_reset_request = '{{ url_for('auth.reset_password_request') }}'
       $scope.isDisabled = false;
       $scope.email = null
       $scope.disableButton = function() {
